--- a/codejam-virtual-keyboard/style.css
+++ b/codejam-virtual-keyboard/style.css
@@ -25,7 +25,7 @@
 .text-area {
   font-size: 18px;
   width: 700px;
-  height: 300px;
+  height: 100px;
   background: #e6fff2;
   /* text-align: center; */
   resize: none;
@@ -107,7 +107,7 @@
   font-weight: normal;
   src: local('Lucida Sans'), url('../assets/fonts/LucidaSans.woff'), format('woff');
 }
-.black{
+.active {
   background-color: rgba(255, 0, 0, 0.6);
   
   /* opacity: 50%; */
