--- a/codejam-virtual-keyboard/style.css
+++ b/codejam-virtual-keyboard/style.css
@@ -124,3 +124,18 @@
 * {
   font-family: 'Lucida Sans', Tahoma, sans-serif;
 }
+
+.user-information {
+  font-size: 16px;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.user-information p {
+  margin: 0;
+  padding: 0;
+}
+
+.capsLocked {
+  text-transform: uppercase;
+}
